[package]
name = "csv-split"
version = "0.1.0"
authors = ["Pranav Kumar <pmkumar@andrew.cmu.edu>"]
description = "A high performant CSV splitter in Rust."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytelines = "2.2"
clap = "3.0.0-beta.1"
csv = "1.1"
rayon = "1.3.0"

[profile.release]
opt-level = 3
lto = true
